--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,6 +11,14 @@
     </head>
     <body>
     {% include "components/navbar.html.twig" %}
+    <div class="jumbotron">
+        <h1 class="display-4">The Wild Circus !</h1>
+        <p>The "Wild Circus Compagny" means Freedom, Love and Passion.
+            Everybody here lives his passion and no one for judging them !
+            Everyone loves his job ( As much as we love YOU ! )
+            Freedomness means that we are going where we want and that we're doing what we want with nobody to tell us what we must do
+            Wild Circus was created in 1978 by Charlie our "daddy" he had this dream to make a group of friends and travel the world with nothing but him and all of his best friends and there we are !</p>
+    </div>
         {% block body %}{% endblock %}
         {% block javascripts %}
             {{ encore_entry_script_tags('app') }}
