--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -1,11 +1,11 @@
 <nav class="d-none d-lg-flex navbar sticky-top navbar-expand-lg navbar-dark bg-dark p-0 m-0">
-    <a class="grow navbar-brand" href="#">
+    <a class="grow navbar-brand" href="{{ path('app_MainPage') }}">
         <img class=" animated jackInTheBox p-0 ml-5" src="images/navbar/logo.png" width="260" height="54" alt="Logo">
     </a>
     <div class="collapse navbar-collapse navPC" id="navbarNav">
         <ul class="navbar-nav">
             <li class="nav-item animated zoomIn delay-1s">
-                <a class="nav-link PC pt-2" href="#">Performance</a>
+                <a class="nav-link PC pt-2" href="{{ path('app_Performances') }}">Performances</a>
             </li>
             <li class="nav-item animated zoomIn delay-1s">
                 <a class="nav-link PC pt-2" href="#">About Us</a>
@@ -34,7 +34,7 @@
         <ul class="navbar-nav text-center portable mr-auto">
             <li class="nav-item mt-3">
                 <hr class="pt-2 p-0" style="border-top: 2px solid goldenrod; width: 50%">
-                <a class="nav-link" href="#">Performance</a>
+                <a class="nav-link" href="{{ path('app_Performances') }}">Performances</a>
             </li>
             <li class="nav-item">
                 <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
