--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -8,13 +8,10 @@
                 <a class="nav-link PC pt-2" href="{{ path('app_Performances') }}">Performances</a>
             </li>
             <li class="nav-item animated zoomIn delay-1s">
-                <a class="nav-link PC pt-2" href="#">About Us</a>
+                <a class="nav-link PC pt-2" href="{{ path('app_Pricing') }}">Pricing</a>
             </li>
             <li class="nav-item animated zoomIn delay-1s">
-                <a class="nav-link PC pt-2" href="#">Pricing</a>
-            </li>
-            <li class="nav-item animated zoomIn delay-1s">
-                <a class="nav-link PC pt-2" href="#">Contact</a>
+                <a class="nav-link PC pt-2" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Contact</a>
             </li>
         </ul>
     </div>
@@ -38,15 +35,11 @@
             </li>
             <li class="nav-item">
                 <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
-                <a class="nav-link" href="#">About Us</a>
+                <a class="nav-link" href="{{ path('app_Pricing') }}">Pricing</a>
             </li>
             <li class="nav-item">
                 <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
-                <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-                <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Contact</a>
                 <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
             </li>
         </ul>
