--- a/templates/mainPage/performances.html.twig
+++ b/templates/mainPage/performances.html.twig
@@ -4,34 +4,43 @@
 {% block body %}
     <div class="container ">
         <div class="row globalContainer justify-content-around text-center pz-0 mz-0">
-            <div class="multiBlock my-3 py-3 col-sm-12 col-lg-3">
-                <h4>Laugh</h4>
+            <div class="multiBlock my-lg-3 py-lg-3 my-5 mz-5 col-sm-12 col-lg-3">
+                <h3>Laugh</h3>
                     <div class="dtl13">
                         <img src="/images/performances/laugh.jpg" alt="">
-                        <div class="dtl">
+                        <div class="dtl d-none d-lg-block">
                             <h3>Laugh</h3>
                             <p>As an adult, come and discover our irresistible clowns, between practical jokes and pranks let yourself be carried away by their joy and fall back into childhood.</p>
                         </div>
+                        <p class="d-block textPortable d-lg-none">
+                        As an adult, come and discover our irresistible clowns, between practical jokes and pranks let yourself be carried away by their joy and fall back into childhood.
+                        </p>
                     </div>
             </div>
-            <div class="multiBlock my-3 py-3 col-sm-12 col-lg-3">
-                <h4>Dream</h4>
+            <div class="multiBlock my-lg-3 py-lg-3 my-5 mz-5 col-sm-12 col-lg-3">
+                <h3>Dream</h3>
                 <div class="dtl13">
                     <img src="/images/performances/dream.jpg" alt="">
-                    <div class="dtl">
+                    <div class="dtl d-none d-lg-block">
                         <h3>Dream</h3>
                         <p>Let yourself be carried away in a world where the real and the imaginary are one, in the company of our talented magicians, discover a wonderful world limited only by your imagination.</p>
                     </div>
+                    <p class="d-block textPortable d-lg-none">
+                        Let yourself be carried away in a world where the real and the imaginary are one, in the company of our talented magicians, discover a wonderful world limited only by your imagination.
+                    </p>
                 </div>
             </div>
-            <div class="multiBlock my-3 py-3 col-sm-12 col-lg-3">
-                <h4>Marvel At</h4>
+            <div class="multiBlock my-lg-3 py-lg-3 my-5 mz-5 col-sm-12 col-lg-3">
+                <h3>Marvel At</h3>
                 <div class="dtl13">
                     <img src="/images/performances/marvelat.jpg" alt="">
-                    <div class="dtl">
+                    <div class="dtl d-none d-lg-block">
                         <h3>Marvel At</h3>
                         <p>Tame the untameable in the company of our tamers, between roar and razor-sharp claws, watch these fierce felines turn into sweet kittens.</p>
                     </div>
+                    <p class="d-block textPortable d-lg-none">
+                        Tame the untameable in the company of our tamers, between roar and razor-sharp claws, watch these fierce felines turn into sweet kittens.
+                    </p>
                 </div>
             </div>
             </div>
