--- a/templates/mainPage/pricing.html.twig
+++ b/templates/mainPage/pricing.html.twig
@@ -1,6 +1,10 @@
 {% extends "base.html.twig" %}
 
 {% block body %}
+    <div class="container">
+    <div class="row">
+        <div class="col-1"></div>
+        <div class="col-10 pt-5">
 <table class="table table-hover">
     <thead class="thead-dark">
     <tr>
@@ -28,4 +32,9 @@
     </tr>
     </tbody>
 </table>
+        </div>
+        <div class="col-1"></div>
+    </div>
+
+    </div>
 {% endblock %}
