--- a/templates/components/footer.html.twig
+++ b/templates/components/footer.html.twig
@@ -9,7 +9,7 @@
                 <ul>
                     <li><a href="{{ path('app_Performances') }}">Performances</a></li>
                     <li><a href="{{ path('app_Pricing') }}">Pricing</a></li>
-                    <li><a data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Contact</a></li>
+                    <li><a href="mailto:gamebundle.eu@gmail.com">Contact</a></li>
                 </ul>
             </div>
         </div>
