--- a/templates/components/navbar.html.twig
+++ b/templates/components/navbar.html.twig
@@ -11,7 +11,7 @@
                 <a class="nav-link PC pt-2" href="{{ path('app_Pricing') }}">Pricing</a>
             </li>
             <li class="nav-item animated zoomIn delay-1s">
-                <a class="nav-link PC pt-2" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Contact</a>
+                <a class="nav-link PC pt-2" href="mailto:gamebundle.eu@gmail.com">Contact</a>
             </li>
         </ul>
     </div>
@@ -39,7 +39,7 @@
             </li>
             <li class="nav-item">
                 <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
-                <a class="nav-link" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Contact</a>
+                <a class="nav-link" href="mailto:gamebundle.eu@gmail.com">Contact</a>
                 <hr class="mt-2 p-0" style="border-top: 2px solid goldenrod; width: 25%">
             </li>
         </ul>
